docs: Swaget documentation for creation and deletion
