# handlers/response.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/JoaoRafa19/goplaning/schemas"
 	"github.com/gin-gonic/gin"
 )
 
@@ -24,3 +25,19 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}){
 	} )
 	
 }
+
+
+type ErrorResponse struct {
+	Message string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+type DeleteOpeningResponse struct {
+	Message string `json:"message"`
+	Data schemas.OpeningResponse `json:"data"`
+}
+
